name:             payasan
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Framework for music composition / song writing
description:
  .
  Framework for music composition / song writing.
  .
  (c) Stephen Tetley 2015-16
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base,
                      containers,
                      directory,
                      filepath,
                      template-haskell,
                      pretty,
                      mtl,
                      text,
                      parsec       >= 3.1   && <= 4.0,
                      zmidi-core
  exposed-modules:
    Payasan.Base.Duration,
    Payasan.Base.Elementary.Notelist,
    Payasan.Base.Elementary.Internal.ABCInTrans,
    Payasan.Base.Elementary.Internal.ABCParser,
    Payasan.Base.Elementary.Internal.AnalysisOutput,
    Payasan.Base.Elementary.Internal.LilyPondInTrans,
    Payasan.Base.Elementary.Internal.LilyPondParser,
    Payasan.Base.Elementary.Internal.LinearOutput,
    Payasan.Base.Elementary.Internal.Metrics,
    Payasan.Base.Elementary.Internal.ElementaryToMain,
    Payasan.Base.Elementary.Internal.Plain,
    Payasan.Base.Elementary.Internal.RecalcBars,
    Payasan.Base.Elementary.Internal.Syntax,
    Payasan.Base.Elementary.Internal.TabularOutput,
    Payasan.Base.Elementary.Internal.Transform,
    Payasan.Base.Elementary.Internal.Traversals,
    Payasan.Base.Elementary.Internal.Zipper,
    Payasan.Base.Internal.ABC.InTrans,
    Payasan.Base.Internal.ABC.Lexer,
    Payasan.Base.Internal.ABC.Output,
    Payasan.Base.Internal.ABC.OutTrans,
    Payasan.Base.Internal.ABC.Parser,
    Payasan.Base.Internal.ABC.Syntax,
    Payasan.Base.Internal.ABC.Utils,
    Payasan.Base.Internal.AddBeams,
    Payasan.Base.Internal.AnalysisCommon,
    Payasan.Base.Internal.BeamSyntax,
    Payasan.Base.Internal.BeamToMain,
    Payasan.Base.Internal.BeamTraversals,
    Payasan.Base.Internal.SyntaxCommon,
    Payasan.Base.Internal.Csound.BeamToCsound,
    Payasan.Base.Internal.Csound.IStmt,
    Payasan.Base.Internal.Csound.Output,
    Payasan.Base.Internal.Csound.OutTrans,
    Payasan.Base.Internal.Csound.Syntax,
    Payasan.Base.Internal.LilyPond.InTrans,
    Payasan.Base.Internal.LilyPond.Lexer,
    Payasan.Base.Internal.LilyPond.OutTrans,
    Payasan.Base.Internal.LilyPond.Parser,
    Payasan.Base.Internal.LilyPond.RhythmicMarkup,
    Payasan.Base.Internal.LilyPond.SimpleOutput,
    Payasan.Base.Internal.LilyPond.Syntax,
    Payasan.Base.Internal.LilyPond.Utils,
    Payasan.Base.Internal.MainSyntax,
    Payasan.Base.Internal.MainToBeam,
    Payasan.Base.Internal.MIDI.BeamToMIDI,
    Payasan.Base.Internal.MIDI.Output,
    Payasan.Base.Internal.MIDI.OutTrans,
    Payasan.Base.Internal.MIDI.PrimitiveSyntax,
    Payasan.Base.Internal.Output.Common,
    Payasan.Base.Internal.Output.Linear.OutputBeam,
    Payasan.Base.Internal.Output.Linear.OutputMain,
    Payasan.Base.Internal.Output.Linear.Utils,
    Payasan.Base.Internal.Output.Tabular.OutputBeam,
    Payasan.Base.Internal.Output.Tabular.OutputMain,
    Payasan.Base.Internal.Output.Tabular.Utils,
    Payasan.Base.Internal.Pipeline,
    Payasan.Base.Internal.Plain,
    Payasan.Base.Internal.RewriteMonad,
    Payasan.Base.Internal.Scale,
    Payasan.Base.Internal.Shell,
    Payasan.Base.Internal.TiedNoteStream,
    Payasan.Base.Internal.Utils,
    Payasan.Base.Names.Chord,
    Payasan.Base.Names.DiatonicInterval,
    Payasan.Base.Names.Duration,
    Payasan.Base.Names.GeneralMidiDrums,
    Payasan.Base.Names.GeneralMidiInstruments,
    Payasan.Base.Names.Interval,
    Payasan.Base.Names.Key,
    Payasan.Base.Names.Pitch,
    Payasan.Base.Notelist,
    Payasan.Base.Pitch,
    Payasan.LilyPond.Chordmode.Notelist,
    Payasan.LilyPond.Chordmode.Internal.Base,
    Payasan.LilyPond.Chordmode.Internal.Interpret,
    Payasan.LilyPond.Chordmode.Internal.InTrans,
    Payasan.LilyPond.Chordmode.Internal.Output,
    Payasan.LilyPond.Chordmode.Internal.OutTrans,
    Payasan.LilyPond.Chordmode.Internal.Parser,
    Payasan.LilyPond.FretDiagram.Notelist,
    Payasan.LilyPond.FretDiagram.Internal.Base,
    Payasan.LilyPond.FretDiagram.Internal.Interpret,
    Payasan.LilyPond.FretDiagram.Internal.Output,
    Payasan.LilyPond.FretDiagram.Internal.Parser,
    Payasan.LilyPond.FretDiagram.Internal.Plain,
    Payasan.LilyPond.Lyricmode.Notelist,
    Payasan.LilyPond.Lyricmode.Internal.Base,
    Payasan.LilyPond.Lyricmode.Internal.Interpret,
    Payasan.LilyPond.Lyricmode.Internal.Output,
    Payasan.LilyPond.Lyricmode.Internal.Parser,
    Payasan.LilyPond.Percussion.Notelist,
    Payasan.LilyPond.Percussion.Internal.Base,
    Payasan.LilyPond.Percussion.Internal.Output,
    Payasan.LilyPond.Percussion.Internal.Parser,
    Payasan.LilyPond.Percussion.Internal.PitchTrans,
    Payasan.Models.Base.Classes,
    Payasan.Models.Base.Z12,
    Payasan.Models.Chords.Base,
    Payasan.Models.Lyrics.Internal.Base,
    Payasan.Models.Lyrics.Internal.Plain,
    Payasan.Models.Lyrics.Internal.Syllable,
    Payasan.Models.Polyrhythms.Base,
    Payasan.Models.UTT.Base,
    Payasan.Score.Cadenza.Notelist,
    Payasan.Score.Cadenza.Internal.CadenzaToBeam,
    Payasan.Score.Cadenza.Internal.CadenzaToElementary,
    Payasan.Score.Cadenza.Internal.InTrans,
    Payasan.Score.Cadenza.Internal.Metrics,
    Payasan.Score.Cadenza.Internal.Parser,
    Payasan.Score.Cadenza.Internal.Syntax,
    Payasan.Score.Cadenza.Internal.Traversals,
    Payasan.Score.Cadenza.Internal.Transform

    

  other-modules:
     
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
