name:             payasan
version:          0.1.0
license:          BSD3
license-file:     LICENSE
copyright:        Stephen Tetley <stephen.tetley@gmail.com>
maintainer:       Stephen Tetley <stephen.tetley@gmail.com>
homepage:         http://code.google.com/p/copperbox/
category:         Music
synopsis:         Framework for music composition / song writing
description:
  .
  Framework for music composition / song writing.
  .
  (c) Stephen Tetley 2015-17
  .

build-type:         Simple
stability:          half baked
cabal-version:      >= 1.2

extra-source-files:
  demo/Demo01.hs


library
  hs-source-dirs:     src
  build-depends:      base,
                      containers,
                      directory,
                      filepath,
                      template-haskell,
                      pretty,
                      mtl,
                      text,
                      parsec       >= 3.1   && <= 4.0,
                      zmidi-core
  exposed-modules:
    Payasan.Base.AltPitch,
    Payasan.Base.Basis,
    Payasan.Base.Duration,
    Payasan.Base.Names.Chord,
    Payasan.Base.Names.DiatonicInterval,
    Payasan.Base.Names.Duration,
    Payasan.Base.Names.GeneralMidiDrums,
    Payasan.Base.Names.GeneralMidiInstruments,
    Payasan.Base.Names.Interval,
    Payasan.Base.Names.Key,
    Payasan.Base.Names.Pitch,
    Payasan.Base.Pitch,
    Payasan.Base.Scale,
    Payasan.Base.Utils,
    Payasan.LilyPond.Chordmode.Notelist,
    Payasan.LilyPond.Chordmode.Internal.Base,
    Payasan.LilyPond.Chordmode.Internal.Interpret,
    Payasan.LilyPond.Chordmode.Internal.InTrans,
    Payasan.LilyPond.Chordmode.Internal.Output,
    Payasan.LilyPond.Chordmode.Internal.OutTrans,
    Payasan.LilyPond.Chordmode.Internal.Parser,
    Payasan.LilyPond.FretDiagram.Notelist,
    Payasan.LilyPond.FretDiagram.Internal.Base,
    Payasan.LilyPond.FretDiagram.Internal.Interpret,
    Payasan.LilyPond.FretDiagram.Internal.Output,
    Payasan.LilyPond.FretDiagram.Internal.Parser,
    Payasan.LilyPond.FretDiagram.Internal.Plain,
    Payasan.LilyPond.Lyricmode.Notelist,
    Payasan.LilyPond.Lyricmode.Internal.Base,
    Payasan.LilyPond.Lyricmode.Internal.Interpret,
    Payasan.LilyPond.Lyricmode.Internal.Output,
    Payasan.LilyPond.Lyricmode.Internal.Parser,
    Payasan.LilyPond.Percussion.Notelist,
    Payasan.LilyPond.Percussion.Internal.Base,
    Payasan.LilyPond.Percussion.Internal.Output,
    Payasan.LilyPond.Percussion.Internal.Parser,
    Payasan.LilyPond.Percussion.Internal.PitchTrans,
    Payasan.Models.Chords.Base,
    Payasan.Models.Lyrics.Internal.Base,
    Payasan.Models.Lyrics.Internal.Plain,
    Payasan.Models.Lyrics.Internal.Syllable,
    Payasan.Models.Polyrhythms.Base,
    Payasan.Models.UTT.Base,
    Payasan.PSC.ABC.Compile,
    Payasan.PSC.ABC.Output,
    Payasan.PSC.ABC.OutTrans,
    Payasan.PSC.ABC.Utils,
    Payasan.PSC.Base.ABCCommon,
    Payasan.PSC.Base.ABCLexer,
    Payasan.PSC.Base.CompilerMonad,
    Payasan.PSC.Base.LilyPondCommon,
    Payasan.PSC.Base.LilyPondLexer,
    Payasan.PSC.Base.RewriteMonad,
    Payasan.PSC.Base.ShowCommon,
    Payasan.PSC.Base.ShowLinearUtils,
    Payasan.PSC.Base.ShowTabularUtils,
    Payasan.PSC.Base.SyntaxCommon,
    Payasan.PSC.Base.Utils,
    Payasan.PSC.Csound.Compile,
    Payasan.PSC.Csound.Output,
    Payasan.PSC.Csound.Utils,
    Payasan.PSC.LilyPond.Compile,
    Payasan.PSC.LilyPond.OutTrans,
    Payasan.PSC.LilyPond.RhythmicMarkup,
    Payasan.PSC.LilyPond.SimpleOutput,
    Payasan.PSC.LilyPond.Utils,
    Payasan.PSC.MIDI.BeamToMIDI,
--    Payasan.PSC.MIDI.Compile,
    Payasan.PSC.MIDI.Output,
    Payasan.PSC.MIDI.OutTrans,
    Payasan.PSC.MIDI.PrimitiveSyntax,
    Payasan.PSC.Old.Pipeline,
    Payasan.PSC.Old.Shell,
    Payasan.PSC.Repr.External.AddBeams,
    Payasan.PSC.Repr.External.ABCInTrans,
    Payasan.PSC.Repr.External.ABCParser,
    Payasan.PSC.Repr.External.LilyPondInTrans,
    Payasan.PSC.Repr.External.LilyPondParser,
    Payasan.PSC.Repr.External.OutTransSeconds,
    Payasan.PSC.Repr.External.Plain,
    Payasan.PSC.Repr.External.ShowLinear,
    Payasan.PSC.Repr.External.ShowTabular,
    Payasan.PSC.Repr.External.Syntax,
    Payasan.PSC.Repr.External.TiedNoteStream,
    Payasan.PSC.Repr.External.Traversals,
    Payasan.PSC.Repr.IREventBar.FromIRSimpleTile,
    Payasan.PSC.Repr.IREventBar.ShowTabular,
    Payasan.PSC.Repr.IREventBar.Syntax,
    Payasan.PSC.Repr.IREventFlat.FromIREventBar,
    Payasan.PSC.Repr.IREventFlat.ShowTabular,
    Payasan.PSC.Repr.IREventFlat.Syntax,
    Payasan.PSC.Repr.IREventFlat.Traversals,
    Payasan.PSC.Repr.IRSimpleTile.Coalesce,
    Payasan.PSC.Repr.IRSimpleTile.FromExternal,
    Payasan.PSC.Repr.IRSimpleTile.Syntax,
    Payasan.PSC.Repr.IRSimpleTile.ShowTabular,
    Payasan.Score.Analysis.Common,
    Payasan.Score.Analysis.Trace,
    Payasan.Score.Cadenza.Notelist,
    Payasan.Score.Cadenza.Internal.CadenzaToExternal,
    Payasan.Score.Cadenza.Internal.InTrans,
    Payasan.Score.Cadenza.Internal.Metrics,
    Payasan.Score.Cadenza.Internal.Parser,
    Payasan.Score.Cadenza.Internal.Syntax,
    Payasan.Score.Cadenza.Internal.Traversals,
    Payasan.Score.Cadenza.Internal.Transform,
    Payasan.Score.Elementary.Notelist,
    Payasan.Score.Elementary.Internal.ABCInTrans,
    Payasan.Score.Elementary.Internal.ABCParser,
    Payasan.Score.Elementary.Internal.AnalysisOutput,
    Payasan.Score.Elementary.Internal.LilyPondInTrans,
    Payasan.Score.Elementary.Internal.LilyPondParser,
    Payasan.Score.Elementary.Internal.Metrics,
    Payasan.Score.Elementary.Internal.ElementaryToExternal,
    Payasan.Score.Elementary.Internal.Operations,
    Payasan.Score.Elementary.Internal.Plain,
    Payasan.Score.Elementary.Internal.Syntax,
    Payasan.Score.Elementary.Internal.ShowLinear,
    Payasan.Score.Elementary.Internal.ShowTabular,
    Payasan.Score.Elementary.Internal.RecalcBars,
    Payasan.Score.Elementary.Internal.Transform,
    Payasan.Score.Elementary.Internal.Traversals,
    Payasan.Score.Elementary.Internal.Zipper

    

  other-modules:
     
  extensions:
    

  ghc-options:
  
  includes: 
  

  
  
